[tool.poetry]
name = "airtag-challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airtag_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
